# SlideCaster

./: .gitignore  .gitmodules  README.md  buildup.md  gesture_recognitions.py  hands_capture.py  image_factory.py  result_handler.py  test.py  todo.md  拟实现的功能.md
control_center/: .gitignore  default.nix  flake.nix  lock.x86_64-linux.json  pyproject.toml  test.py
control_center/.direnv/: flake-profile-3-link
control_center/.dream2nix/python/: editable-args.json
control_center/.dream2nix/python/site/: control_center.pth  sitecustomize.py
control_center/.dream2nix/python/site/control_center-0.1.0.dist-info/: METADATA  direct_url.json  top_level.txt
control_center/app/: __init__.py
control_center/app/routers/: control_router.py  resource_router.py
control_center/src/app/: __init__.py  __main__.py
control_center/src/app/models/: control_model.py
control_center/src/app/routers/: control_router.py
control_center/src/app/services/: control_service.py
control_center/src/control_center/: __init__.py
control_center/src/control_center/routers/: control_router.py
gesture_recognition/: .env  .gitignore  debug_action.py  flake.nix  gesture_recognitions.py  lock.x86_64-linux.json  pyproject.toml
gesture_recognition/app/: __main__.py  config.py  gesture_recognizer.py  mp_image_factory.py
gesture_recognition/app/preprocessor/: gesture_filter.py
gesture_recognition/app/readers/: __init__.py  camera_reader.py  file_reader.py
gesture_recognition/app/recognizer/: __init__.py  gesture_recognizer.py
gesture_recognition/docker/: compose.yaml
pdf_viewer/: app.vue  default.nix  flake.nix  package-lock.json  package.json  pnpm-lock.yaml
sc_reader/: .gitignore  app.vue  flake.nix  nuxt.config.ts  package.json  pnpm-lock.yaml
sc_reader/api/: file.ts  (+2 more)
sc_server/: .env  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
sc_server/sc_server/: __init__.py  config.py  error.py
sc_server/sc_server/cli/: __init__.py  server_cli.py
sc_server/sc_server/routers/: __init__.py  control_router.py  file_router.py
sc_server/sc_server/services/: control_service.py  file_service.py
sc_server/sc_server/submodule/reader/: 200.html
sc_server/sc_server/submodule/reader/_nuxt/: BAGBBMkk.js  BLiGMD8O.js  BvIlrEy_.js  CGXvxBVO.js  Cqr5Bzz2.js  Cr-Uwpqp.js  CwO8upvV.js  DQrfmnUv.js  DRufy4CT.js  G9Zi20Z4.js  TWc_vMyF.js  entry.C-0yCfrS.css  error-404.DbOmCOXT.css  error-500.hlZIR3Lj.css
sc_server/sc_server/submodule/reader/_nuxt/builds/: latest.json
sc_server/sc_server/submodule/reader/_nuxt/builds/meta/: fc59aa14-cf52-4683-9a55-ff65617f81f6.json
sc_server/sc_server/submodule/recognizer/: __init__.py  __main__.py  camera_reader.py  config.py  gesture_filter.py  gesture_mapper.py  gesture_recognizer.py
sc_server/sc_server/submodule/recognizer/default/: map.json
sc_server/sc_server/submodule/recognizer/utils/: fps_controller.py
sc_server/sc_server/utils/: async_proc_queue.py  connection_manager.py
(+4 files in other folders)
