[project]
name = "control_center"
version = "0.1.0"
description = "Gesture recognition control center"
authors = [{ name = "Dessera", email = "1533653159@qq.com" }]
# license = "MIT"
readme = "README.md"

dependencies = ["fastapi==0.113.0", "websockets==13.0.1", "uvicorn==0.30.6"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# [project.scripts]
# jlud = "jlud:main"
