[project]
name = "jlud"
version = "0.1.0"
description = "JLU Drcom client implemented by python"
authors = [{ name = "Dessera", email = "1533653159@qq.com" }]
# license = "MIT"
readme = "README.md"

dependencies = ["mediapipe"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
