[project]
name = "jlud"
version = "0.1.0"
description = "JLU Drcom client implemented by python"
authors = [{ name = "Dessera", email = "1533653159@qq.com" }]
# license = "MIT"
readme = "README.md"

dependencies = ["mediapipe==0.10.15", "python-statemachine==2.3.4"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
