[tool.poetry]
name = "sc-server"
version = "0.1.0"
description = "SlideCaster Server"
authors = ["Dessera <lord.changed@foxmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
